--- a/conditions.html
+++ b/conditions.html
@@ -10,6 +10,7 @@
 <h1>Conditions</h1>
 <ul/>
 <hr>
+<button onclick='Back()'>CANCEL</button>
 <button onclick='nu()'>NEW</button>
 <button onclick='removeAll()'>REMOVE ALL</button>
 <button>IMPORT</button>
