--- a/details.html
+++ b/details.html
@@ -95,7 +95,7 @@ Pump Style
       </td>
     </tr>
     <tr>
-      <td>Kinematic Viscosity</td>
+      <td>Kinematic Viscosity <em>(cS)</em></td>
       <td><input name='viscosity' type="number"></td>
     </tr>
     <tr>
