--- a/details.html
+++ b/details.html
@@ -113,11 +113,11 @@ Pump Style
     <tr>
       <td class='th'>Motor</td><td/>
     </tr>
-      <td>Line freq</td>
+      <td>Line freq <em>(Hz)</em></td>
       <td> 
         <select name='line'>
-          <option>50 Hz</option>
-          <option>60 Hz</option>
+          <option>50</option>
+          <option>60</option>
         </select>
       </td>
     </tr>      
