--- a/details.html
+++ b/details.html
@@ -122,7 +122,7 @@ Pump Style
       </td>
     </tr>      
     <tr>
-      <td>Power Rating</td>
+      <td>Power Rating <em>(kW)</em></td>
       <td><input name='power_rating' type="number"></td>
     </tr>
     <tr>
