--- a/conditions.html
+++ b/conditions.html
@@ -34,7 +34,7 @@
 		$(Main).find('td:nth-child(n+3),th:nth-child(n+3):nth-last-child(n+2)').remove();
 		Back();
 	}
-	function update(e) {debugger;
+	function update(e) {
 		Idx = $(e).index();
 		Back();
 		setPump();
