--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       button:hover {
         /*border-color: blue;*/
       }
-      input {
+      input:not([type=radio]) {
         padding: .5em;
         border: solid 1px #fff;
         box-shadow: inset 1px 1px 2px 0 #707070;
