--- a/details.html
+++ b/details.html
@@ -282,7 +282,7 @@ Pump Style
   
   function unitPowerRating() {
     const dlg = $('#unit_power_rating');
-    $('[name=power_rating]').eq(dlg.data('idx')-1).val(Math.round(dlg.find('input').val()*.7457*10000)/10000);
+    $('[name=power_rating]').eq(dlg.data('idx')-1).val(Math.round(dlg.find('input').val()*.745699872*10000)/10000);
     dlg[0].close();
   }
   function unitFlow() {
