--- a/details.html
+++ b/details.html
@@ -243,31 +243,31 @@ Pump Style
       <td class='th vam'><span>Results</span> <button onclick='load("curve")'><i class="fa fa-line-chart"/></button></td><td></td>
     </tr>
     <tr>
-      <td>Pump efficiency</td><td class='result'><span></span></td>
+      <td><span>Pump efficiency</span> <em>(%)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor rated power</td><td class='result'><span></span></td>
+      <td><span>Motor rated power</span> <em>(kW)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor shaft power</td><td class='result'><span></span></td>
+      <td><span>Motor shaft power</span> <em>(kW)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Pump shaft power</td><td class='result'><span></span></td>
+      <td><span>Pump shaft power</span> <em>(kW)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor efficiency</td><td class='result'><span></span></td>
+      <td><span>Motor efficiency</span> <em>(%)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor power factor</td><td class='result'><span></span></td>
+      <td><span>Motor power factor</span> <em>(%)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor current</td><td class='result'><span></span></td>
+      <td><span>Motor current</span> <em>(amps)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Motor power</td><td class='result'><span></span></td>
+      <td><span>Motor power</span> <em>(kW)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td>Annual energy</td><td class='result'><span></span></td>
+      <td><span>Annual energy</span> <em>(MWh)</em></td><td class='result'><span></span></td>
     </tr>
     <tr>
       <td>Annual cost</td><td class='result'><span></span></td>
