--- a/headtool.html
+++ b/headtool.html
@@ -12,39 +12,38 @@
 	}
 	
 }
-
 </style>
 <h1>Head Tool</h1>
 Suction pipe diameter (ID)<br>
-<input type=number/> <em>inches</em><br>
+<input type=number/> <em>mm</em><br>
 Discharge pipe diameter (ID)<br>
-<input type=number/> <em>inches</em><br>
+<input type=number/> <em>mm</em><br>
 Suction gauge pressure (Ps)<br>
-<input type=number/> <em>psig</em><br>
-Discharge gauge pressure (Ps)<br>
-<input type=number/> <em>psig</em><br>
+<input type=number/> <em>kPa</em><br>
+Discharge gauge pressure (Pd)<br>
+<input type=number/> <em>kPa</em><br>
 Suction gauge elevation (Zs)<br>
-<input type=number/> <em>ft</em><br>
-Discharge gauge elevation (Zs)<br>
-<input type=number/> <em>ft</em><br>
+<input type=number/> <em>m</em><br>
+Discharge gauge elevation (Zd)<br>
+<input type=number/> <em>m</em><br>
 Suction line loss coefficients (Ks)<br>
 <input type=number/><br>
-Discharge line loss coefficients (Ks)<br>
+Discharge line loss coefficients (Kd)<br>
 <input type=number/><br>
 Fluid specific gravity<br>
 <input type=number/><br>
 Flow rate<br>
-<input type=number/> <em>gpm</em><br>
+<input type=number/> <em>L/s</em><br>
 Differential elevation head<br>
-<input class=result disabled="" type=number/> <em>ft</em><br>
+<input class=result disabled="" type=number/> <em>m</em><br>
 Differential pressure head<br>
-<input class=result disabled="" type=number/> <em>ft</em><br>
+<input class=result disabled="" type=number/> <em>m</em><br>
 Differential velocity head<br>
-<input class=result disabled="" type=number/> <em>ft</em><br>
+<input class=result disabled="" type=number/> <em>m</em><br>
 Estimated suction friction head<br>
-<input class=result disabled="" type=number/> <em>ft</em><br>
+<input class=result disabled="" type=number/> <em>m</em><br>
 Estimated discharge friction head<br>
-<input class=result disabled="" type=number/> <em>ft</em><br>
+<input class=result disabled="" type=number/> <em>m</em><br>
 <span style='color:green'>Pump head</span><br>
 <input style='background-color: lightgray' class=result disabled="" type=number/> <em>ft</em><br>
 
