--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         background-color: ghostwhite;
         /*margin:auto;*/
       }
-      
+
       .hover:hover, button:hover {
         cursor: pointer;
         
@@ -21,6 +21,10 @@
       h1,th {
         color: green;
       }
+      em, dialog label {
+        font-size: .75rem;
+        font-style: italic;
+      } 
       button {
         color: dodgerblue;
       }
