--- a/conditions.html
+++ b/conditions.html
@@ -23,7 +23,7 @@
 <script>
 	function nu() {
 		Idx = Cond.length;
-		$('body').load('notes.html');
+		$('#container').load('notes.html');
 	}
 	function removeAll() {
 		LS.removeItem('conditions');
