--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
       }
     </style>
     <script>
+      function unitFlow() {debugger;
+        const dlg = $('#unit_flow');
+        target(dlg.data('src')).val(Math.round(dlg.find('input:not([type=radio])').val()*dlg.find(':checked').val()*10000)/10000);
+        dlg[0].close();
+      }
+      function showUnit(e,sel) {
+        const dlg = $(sel);
+        dlg.find('input:not([type=radio])').val('');
+        dlg[0].showModal();
+        dlg.data('src',$(e));
+      }
+    function target(e) {
+      return e.prev();
+    }
+
       $ = require('jquery');
       Bridge = require('./build/Release/bridge');
       LS = localStorage;
